lib/tests/fixtures/compiler/parser/ineffective_function.baseline
Error: ineffective_function.pp:2:5: ineffective statements may only appear as the last statement at top-level or inside functions and conditional expressions.
  1 + 1
  ^~~~~
