lib/tests/fixtures/compiler/parser/ineffective_function.pp
function foo() {
    1 + 1
    notice hi
}

foo()
